Bug 1613996 - Try to avoid instantiating an FT_Face just to read the font's charmap for FindFontForChar. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D62152